# woodcreek-agents

./: .gitignore  docker-compose.yml  woodcreek-vector.yml
dacribagents-api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  alembic.ini  pyproject.toml
dacribagents-api/alembic/: env.py
dacribagents-api/alembic/versions/: 001_baseline_reminder_schema.py
dacribagents-api/src/dacribagents/: Dockerfile  __init__.py
dacribagents-api/src/dacribagents/api/: main.py  routes.py
dacribagents-api/src/dacribagents/application/: __init__.py
dacribagents-api/src/dacribagents/application/agents/: __init__.py  base.py  general_assistant.py  hoa_compliance.py  solar.py  supervisor.py
dacribagents-api/src/dacribagents/application/interaction/: classifier.py  contracts.py  graph.py  router.py  validator.py
dacribagents-api/src/dacribagents/application/ports/: calendar_adapter.py  checkpoint_store.py  delivery_channel.py  email_source.py  event_publisher.py  reminder_policy.py  reminder_store.py  vector_store.py
dacribagents-api/src/dacribagents/application/rag/: __init__.py  retriever.py
dacribagents-api/src/dacribagents/application/services/: acknowledgment.py  anomaly_review.py  approval_policy.py  audit_timeline.py  calendar_mirror.py  calendar_queries.py  channel_policy.py  control_loop.py  coordination.py  delivery.py  digest.py  escalation.py  event_intake.py  governance.py  scheduler.py  sms_reply_handler.py  suggestions.py
dacribagents-api/src/dacribagents/application/use_cases/: ingest_email.py  process_sms.py  reminder_queries.py  reminder_workflows.py
dacribagents-api/src/dacribagents/application/workflows/: reminder_lifecycle.py  runner.py
dacribagents-api/src/dacribagents/cli/: email_worker.py  email_worker_lattice.py  ingest_once.py  test_lattice.py  worker.py
dacribagents-api/src/dacribagents/domain/: __init__.py  models.py
dacribagents-api/src/dacribagents/domain/entities/: attachment.py  email_message.py
dacribagents-api/src/dacribagents/domain/reminders/: __init__.py  entities.py  enums.py  lifecycle.py  models.py
dacribagents-api/src/dacribagents/infrastructure/: __init__.py  logging.py  milvus_client.py  postgres_client.py  settings.py
dacribagents-api/src/dacribagents/infrastructure/agentic_rag/: __init__.py   agentic_rag.py  hoa_agent_with_rag.py  langgraph_rag.py  milvus_routes.py  routes_combined.py
dacribagents-api/src/dacribagents/infrastructure/attachments/: s3_store.py  store.py
dacribagents-api/src/dacribagents/infrastructure/calendar/: ical_adapter.py  mock_adapter.py  workmail_ews.py
dacribagents-api/src/dacribagents/infrastructure/delivery/: email_adapter.py  slack_adapter.py  sms_adapter.py
dacribagents-api/src/dacribagents/infrastructure/document_parsing/: pdf.py
dacribagents-api/src/dacribagents/infrastructure/email/: rfc822.py
dacribagents-api/src/dacribagents/infrastructure/email/providers/workmail_imap/: auth.py  client.py  mapper.py
dacribagents-api/src/dacribagents/infrastructure/embeddings/: __init__.py  factory.py
dacribagents-api/src/dacribagents/infrastructure/guardrails/: __init__.py  actions.py  rails.py
dacribagents-api/src/dacribagents/infrastructure/guardrails/config/: config.yml
dacribagents-api/src/dacribagents/infrastructure/guardrails/config/general/: config.yml  rails.co
dacribagents-api/src/dacribagents/infrastructure/guardrails/config/hoa/: config.yml  rails.co
dacribagents-api/src/dacribagents/infrastructure/guardrails/config/solar/: config.yml  rails.co
dacribagents-api/src/dacribagents/infrastructure/http/: app.py  event_ingest.py  health.py  scheduler_endpoint.py  search.py  slack_ingest.py  slack_interactions.py  sms_ingest.py  sms_injest.py
dacribagents-api/src/dacribagents/infrastructure/kafka/: consumer.py  event_publisher.py
dacribagents-api/src/dacribagents/infrastructure/lattice/: __init__.py  publisher.py  retriever.py
dacribagents-api/src/dacribagents/infrastructure/llm/: __init__.py  factory.py  model_registry.py  vllm_client.py
dacribagents-api/src/dacribagents/infrastructure/ragas/: __init__.py  evaluation_pipeline.py  evaluation_routes.py  ragas_metrics.py
dacribagents-api/src/dacribagents/infrastructure/reminders/: governance_store.py  in_memory_store.py  postgres_store.py  runtime.py  scheduler_task.py  schema.py
dacribagents-api/src/dacribagents/infrastructure/slack/: _store.py  client.py  formatters.py  handler.py
dacribagents-api/src/dacribagents/infrastructure/sms/: README.md
dacribagents-api/src/dacribagents/infrastructure/sms/providers/telnyx/: __init__.py  outbound.py
dacribagents-api/src/dacribagents/infrastructure/sqlite/: __init__.py  client.py  schema.sql
dacribagents-api/src/dacribagents/infrastructure/stores/: __init__.py  milvus_checkpoint_store.py  milvus_email_store.py
dacribagents-api/tests/application/interaction/: test_contracts_and_routing.py
dacribagents-api/tests/application/services/: test_approval_policy.py  test_audit_and_anomaly.py  test_calendar_mirror.py  test_calendar_queries.py  test_coordination.py  test_delivery.py  test_digest.py  test_escalation.py  test_event_intake.py  test_governance.py  test_governance_integration.py  test_scheduler.py  test_sms_reply.py
dacribagents-api/tests/application/use_cases/: test_reminder_queries.py  test_reminder_workflows.py
dacribagents-api/tests/application/workflows/: test_reminder_lifecycle.py
dacribagents-api/tests/domain/reminders/: conftest.py  test_entities.py  test_lifecycle.py  test_models.py
dacribagents-api/tests/infrastructure/: test_runtime.py
dacribagents-api/tests/infrastructure/calendar/: test_mock_adapter.py
dacribagents-api/tests/infrastructure/slack/: test_formatters.py  test_handler.py
dacribagents-api/tests/integration/: conftest.py  test_event_driven.py  test_governance_integration.py  test_lifecycle_e2e.py
docs/: DEPLOYMENT.md  TODO.md
docs/ADRs/: ADR-001.md  ADR-005.md  ADR-006.md  (+2 more)
telnyx-sms-gateway/: .gitignore  package.json  wrangler.consumer.toml  wrangler.toml  wrangler.webhook.toml
(+15 files in other folders)
